Quick footer style fix

--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -1,17 +1,19 @@
+<!-- Section margin - line -->
+<div class="container section-margin hr-line"></div>
 <!-- Footer start -->
-<footer class="main-footer section-margin">
-    <!-- main footer container -->
+<footer class="main-footer">
+    <!-- Main footer container -->
     <div class="container colored-footer">
         <div class="row´">
             <!-- Logotype and text about company -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 footer-about-section">
-                <!-- footer main title -->
+                <!-- Footer main title -->
                 <h4>Baking Master Web Application</h4>
-                <!-- about app section -->
+                <!-- About app section -->
                 <p class="about-website">This web app was created for studying purposes only. You can find here lots of different baking recipes, lots of great ideas how to surprise your friends or family, with your sweet cakes, muffins or even fresh baked bread with seeds. Also
                     you can find necessary equipemnt to help you become baking master of your home! Save your favourite recipes, create new, edit or remove, if you don't want to share them to world..<br><span class="footer-greetings">Enjoy browsing all recipes!</span></p>
             </div>
-            <!-- footer menu -->
+            <!-- Footer menu -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                 <ul class="footer-menu">
                     <h4>Worth knowing</h4>
@@ -22,7 +24,7 @@
                     <li><a href="{{url_for('site_map')}}" class="footer-link">Site - Map</a></li>
                 </ul>
             </div>
-            <!-- newsletter -->
+            <!-- Newsletter section -->
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 newsletter-section">
                 <h4>Newsletter</h4>
                 <p class="newsletter-desc">Sign up for our newsletter! Receive notifications about new recipes, baking equipement and all possible discounts codes. Don't be late, we're waiting for you!</p>
@@ -35,7 +37,7 @@
             </div>
         </div>
     </div>
-    <!-- copyrights -->
+    <!-- Copyrights section -->
     <div>
         <div class="flex-copyrights">
             <p class="copyrights">&copy; 2020 -
