Footer hr line stale and padding changed

--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -1,7 +1,6 @@
-<!-- Section margin - line -->
-<div class="container section-margin hr-line"></div>
 <!-- Footer start -->
-<footer class="main-footer">
+<hr class="hr-line">
+<footer class="main-footer section-margin">
     <!-- Main footer container -->
     <div class="container colored-footer">
         <div class="row´">
