Main section margin class and hr-line class changed

--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -1,4 +1,5 @@
-<div class="container section-margin">
+<!-- Section margin - line -->
+<div class="container">
     <div class="justify-content-center">
         <div class="user_card">
             <div class="d-flex justify-content-center">
