--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -1,4 +1,7 @@
 {% extends 'layout/base.html' %}
 {% block content %}
+<h1 class="hidden">Login page</h1>
+<div class="">
 {% include 'components/forms/login-form.html' %}
+</div>
 {% endblock %}
