--- a/scss/base/main.scss
+++ b/scss/base/main.scss
@@ -1,8 +1,8 @@
 html,
 body {
-    height: 100vh;
-    min-height: 100%;
-    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    width: 100vw;
     font-size: 1rem;
     font-weight: 300;
     text-decoration: none;
@@ -19,6 +19,18 @@ h4 {
     color: $h4-color;
 }
 
-.section-margin{
-    margin-top: 70px;
+.container{
+    height: 100%;
+}
+
+.section-margin {
+    padding-top: 70px;
+}
+
+.hr-line {
+    height: 1px;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
