--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 html,
 body {
-  height: 100vh;
-  min-height: 100%;
-  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  width: 100vw;
   font-size: 1rem;
   font-weight: 300;
   text-decoration: none;
@@ -20,8 +20,20 @@ h4 {
   color: #FF4365;
 }
 
+.container {
+  height: 100%;
+}
+
 .section-margin {
-  margin-top: 70px;
+  padding-top: 70px;
+}
+
+.hr-line {
+  height: 1px;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .navbar {
