Quick navigation dropdown link hover style fix

--- a/scss/components/header/nav.scss
+++ b/scss/components/header/nav.scss
@@ -78,6 +78,7 @@
         a {
             padding-top: 15px;
             padding-bottom: 15px;
+            widtH: 150px;
         }
     }
     .navbar li a {
