Login form main container style applied

--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -1,40 +1,42 @@
 // headings
-$h4-color: #FF4365;
+$h4-color: #FF3366;
 
 
 // main navigation 
 $nav-bg-color: #FFF;
-$nav-border-color: #FF4365;
-$nav-links-color: #FF4365;
+$nav-border-color: #FF3366;
+$nav-links-color: #FF3366;
 $nav-link-hv: #FFF;
-$nav-link-bg-hv :#FF4365;
+$nav-link-bg-hv :#FF3366;
 
 // toggle/mobile navigation
-$nav-bg-color-mobile: #FF4365;
+$nav-bg-color-mobile: #FF3366;
 $nav-links-color-mobile: #FFF;
 $nav-link-bg-hv-mobile: #FFF;
 
 // footer
 $footer-bg: #FFF;
-$footer-copyrights-bg: #FF4365;
-$footer-link-color: #FF4365;
+$footer-copyrights-bg: #FF3366;
+$footer-link-color: #FF3366;
 $copyrights-color: #FFF;
 
 // newsletter
 $newsletter-input-border: #EEE;
 $newsletter-input: #FFF;
 $input-form-text-color:#ababab;
-$newsletter-button-border: #FF4365;
+$newsletter-button-border: #FF3366;
 
 // login page
 $login-card-bg: #FFF;
 
+$login-form-circle-bg: #FF3366;
+
 // login button style
-$login-button-bg: #FF4365;
-$login-button-color: #FFF;
-$login-button-border-color: #FF4365;
+$login-button-bg: #FFF;
+$login-button-color: #FF3366;
+$login-button-border-color: #FF3366;
 
 // login button hover style
-$login-button-bg-hv: #FFF;
-$login-button-color-hv: #FF4365;
-$login-button-border-color-hv: #FF4365;
+$login-button-bg-hv: #FF3366;
+$login-button-color-hv: #FFF;
+$login-button-border-color-hv: #FF3366;
