--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -1,7 +1,6 @@
-{% extends 'layout/base.html' %}
-{% block content %}
-<h1 class="hidden">Login page</h1>
-<div class="">
-{% include 'components/forms/login-form.html' %}
+{% extends 'layout/base.html' %} {% block content %}
+<div class="container section-margin">
+    <h1 class="hidden">Login page</h1>
+    {% include 'components/forms/login-form.html' %}
 </div>
 {% endblock %}
