--- a/scss/components/forms/login-form.scss
+++ b/scss/components/forms/login-form.scss
@@ -1,44 +1,65 @@
-.user_card {
+.login-form {
+    display: flex;
+    justify-content: center;
+    padding-top: 150px;
+    padding-bottom: 50px;
+}
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+}
+
+.user-card {
     height: 400px;
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
     background: $login-card-bg;
     position: relative;
-    display: flex;
-    justify-content: center;
     flex-direction: column;
     padding: 10px;
-    box-shadow: 0 0px 14px 1px rgba(0, 0, 0, 0.15), 0 0px 0px 0 rgba(0, 0, 0, 0.15);
-    -webkit-box-shadow: 0 0px 14px 1px rgba(0, 0, 0, 0.15), 0 0px 0px 0 rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0 0px 14px 1px rgba(0, 0, 0, 0.15), 0 0px 0px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06),
+    0 0 0 0 rgba(0, 0, 0, 05) !important;
+    -webkit-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06),
+    0 0 0 0 rgba(0, 0, 0, 05) !important;
+    -moz-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06),
+    0 0 0 0 rgba(0, 0, 0, 05) !important;
     border-radius: 5px;
-
 }
 
-.brand_logo_container {
+.brand-logo-container {
     position: absolute;
-    height: 170px;
-    width: 170px;
-    top: -75px;
+    height: 110px;
+    width: 110px;
+    top: -50px;
     border-radius: 50%;
-    background: #FFF;
-    padding: 10px;
+    background: $login-form-circle-bg !important;
+    padding: 5px;
     text-align: center;
+    box-shadow: 0 -10px 15px 1px rgba(0, 0, 0, 0.06),
+    0 0 0 0 black !important;
+    -webkit-box-shadow: 0 -10px 15px 1px rgba(0, 0, 0, 0.06),
+    0 0 0 0 black !important;
+    -moz-box-shadow:0 -10px 15px 1px rgba(0, 0, 0, 0.06),
+    0 0 0 0 black !important;
+    img {
+        background-color: #FFF;
+    }
 }
 
-.brand_logo {
-    height: 150px;
-    width: 150px;
+.brand-logo {
+    height: 100px;
+    width: 100px;
     border-radius: 50%;
-    border: 2px solid white;
+    border: 2px solid #FFF;
 }
 
-.form_container {
+.form-container {
     margin-top: 100px;
 }
 
-.login_btn {
+.login-btn {
     width: 100%;
     background: $login-button-bg;
     color: $login-button-color;
@@ -51,23 +72,6 @@
     }
 }
 
-.login_container {
+.login-container {
     padding: 0 2rem;
-}
-
-.input-group-text {
-    background: #c0392b !important;
-    color: white !important;
-    border: 0 !important;
-    border-radius: 0.25rem 0 0 0.25rem !important;
-}
-
-.input_user,
-.input_pass:focus {
-    box-shadow: none !important;
-    outline: 0px !important;
-}
-
-.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
-    background-color: #c0392b !important;
 }
