--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 h4 {
-  color: #FF4365;
+  color: #FF3366;
 }
 
 .container {
@@ -25,7 +25,7 @@ h4 {
 }
 
 .section-margin {
-  padding-top: 70px;
+  padding-top: 20px;
 }
 
 .hr-line {
@@ -48,7 +48,7 @@ h4 {
   box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.05), 0 4px 4px 0 rgba(0, 0, 0, 0.04);
 }
 .navbar li a {
-  color: #FF4365 !important;
+  color: #FF3366 !important;
   margin-left: 15px;
   padding: 20px 0 20px 0;
   font-weight: 400;
@@ -56,7 +56,7 @@ h4 {
 
 .hvr-underline-from-left:before {
   bottom: 15px;
-  background: #FF4365;
+  background: #FF3366;
   height: 2px;
 }
 
@@ -78,13 +78,13 @@ h4 {
   border: 1px solid #fff;
 }
 .navbar-inverse .navbar-toggle .icon-bar {
-  background-color: #FF4365 !important;
+  background-color: #FF3366 !important;
 }
 .navbar-inverse .navbar-toggle:hover {
-  border: 1px solid #FF4365;
+  border: 1px solid #FF3366;
 }
 .navbar-inverse .navbar-toggle:hover .icon-bar {
-  background-color: #FF4365 !important;
+  background-color: #FF3366 !important;
 }
 
 .navbar-inverse .navbar-collapse,
@@ -105,12 +105,13 @@ h4 {
 @media (max-width: 767.98px) {
   .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
-    background-color: #FF4365;
+    background-color: #FF3366;
   }
   .navbar-inverse .navbar-collapse a,
 .navbar-inverse .navbar-form a {
     padding-top: 15px;
     padding-bottom: 15px;
+    widtH: 150px;
   }
 
   .navbar li a {
@@ -133,76 +134,75 @@ h4 {
     bottom: 4px;
   }
 }
-.user_card {
+.login-form {
+  display: flex;
+  justify-content: center;
+  padding-top: 150px;
+  padding-bottom: 50px;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+}
+
+.user-card {
   height: 400px;
   width: 350px;
   margin-top: auto;
   margin-bottom: auto;
   background: #FFF;
   position: relative;
-  display: flex;
-  justify-content: center;
   flex-direction: column;
   padding: 10px;
-  box-shadow: 0 0px 14px 1px rgba(0, 0, 0, 0.15), 0 0px 0px 0 rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 0 0px 14px 1px rgba(0, 0, 0, 0.15), 0 0px 0px 0 rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 0px 14px 1px rgba(0, 0, 0, 0.15), 0 0px 0px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06), 0 0 0 0 black !important;
+  -webkit-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06), 0 0 0 0 black !important;
+  -moz-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06), 0 0 0 0 black !important;
   border-radius: 5px;
 }
 
-.brand_logo_container {
+.brand-logo-container {
   position: absolute;
-  height: 170px;
-  width: 170px;
-  top: -75px;
+  height: 110px;
+  width: 110px;
+  top: -50px;
   border-radius: 50%;
-  background: #FFF;
-  padding: 10px;
+  background: #FF3366 !important;
+  padding: 5px;
   text-align: center;
+  box-shadow: 0 -10px 15px 1px rgba(0, 0, 0, 0.06), 0 0 0 0 black !important;
+  -webkit-box-shadow: 0 -10px 15px 1px rgba(0, 0, 0, 0.06), 0 0 0 0 black !important;
+  -moz-box-shadow: 0 -10px 15px 1px rgba(0, 0, 0, 0.06), 0 0 0 0 black !important;
+}
+.brand-logo-container img {
+  background-color: #FFF;
 }
 
-.brand_logo {
-  height: 150px;
-  width: 150px;
+.brand-logo {
+  height: 100px;
+  width: 100px;
   border-radius: 50%;
-  border: 2px solid white;
+  border: 2px solid #FFF;
 }
 
-.form_container {
+.form-container {
   margin-top: 100px;
 }
 
-.login_btn {
+.login-btn {
   width: 100%;
-  background: #FF4365;
-  color: #FFF;
-  border: 1px solid #FF4365;
-}
-.login_btn:hover {
   background: #FFF;
-  color: #FF4365;
-  border: 1px solid #FF4365;
+  color: #FF3366;
+  border: 1px solid #FF3366;
+}
+.login-btn:hover {
+  background: #FF3366;
+  color: #FFF;
+  border: 1px solid #FF3366;
 }
 
-.login_container {
+.login-container {
   padding: 0 2rem;
-}
-
-.input-group-text {
-  background: #c0392b !important;
-  color: white !important;
-  border: 0 !important;
-  border-radius: 0.25rem 0 0 0.25rem !important;
-}
-
-.input_user,
-.input_pass:focus {
-  box-shadow: none !important;
-  outline: 0px !important;
-}
-
-.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #c0392b !important;
 }
 
 .main-footer {
@@ -246,12 +246,12 @@ h4 {
 .footer-link {
   font-size: 0.85rem;
   font-weight: 400;
-  color: #FF4365;
+  color: #FF3366;
   margin-bottom: 5px;
   opacity: 0.8;
 }
 .footer-link:hover {
-  color: #FF4365;
+  color: #FF3366;
   text-decoration: none;
   opacity: 1;
 }
@@ -266,7 +266,7 @@ h4 {
 
 .footer-greetings {
   font-weight: 400;
-  color: #FF4365;
+  color: #FF3366;
 }
 
 .newsletter-form {
@@ -295,7 +295,7 @@ h4 {
   height: 30px;
   transition: background-color 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
   border-radius: 15px;
-  background-color: #FF4365;
+  background-color: #FF3366;
   color: #fff;
   font-size: 0.85rem;
   line-height: 1;
@@ -318,7 +318,7 @@ h4 {
   justify-content: center;
   align-content: center;
   align-items: center;
-  background-color: #FF4365;
+  background-color: #FF3366;
 }
 .flex-copyrights p {
   margin: 0;
@@ -340,77 +340,6 @@ h4 {
   .footer-menu {
     text-align: left;
   }
-}
-.user_card {
-  height: 400px;
-  width: 350px;
-  margin-top: auto;
-  margin-bottom: auto;
-  background: #FFF;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  padding: 10px;
-  box-shadow: 0 0px 14px 1px rgba(0, 0, 0, 0.15), 0 0px 0px 0 rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 0 0px 14px 1px rgba(0, 0, 0, 0.15), 0 0px 0px 0 rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 0px 14px 1px rgba(0, 0, 0, 0.15), 0 0px 0px 0 rgba(0, 0, 0, 0.15);
-  border-radius: 5px;
-}
-
-.brand_logo_container {
-  position: absolute;
-  height: 170px;
-  width: 170px;
-  top: -75px;
-  border-radius: 50%;
-  background: #FFF;
-  padding: 10px;
-  text-align: center;
-}
-
-.brand_logo {
-  height: 150px;
-  width: 150px;
-  border-radius: 50%;
-  border: 2px solid white;
-}
-
-.form_container {
-  margin-top: 100px;
-}
-
-.login_btn {
-  width: 100%;
-  background: #FF4365;
-  color: #FFF;
-  border: 1px solid #FF4365;
-}
-.login_btn:hover {
-  background: #FFF;
-  color: #FF4365;
-  border: 1px solid #FF4365;
-}
-
-.login_container {
-  padding: 0 2rem;
-}
-
-.input-group-text {
-  background: #c0392b !important;
-  color: white !important;
-  border: 0 !important;
-  border-radius: 0.25rem 0 0 0.25rem !important;
-}
-
-.input_user,
-.input_pass:focus {
-  box-shadow: none !important;
-  outline: 0px !important;
-}
-
-.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #c0392b !important;
 }
 
 /*# sourceMappingURL=style.css.map */
