Register and recovery links style added

--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -28,8 +28,12 @@ $newsletter-button-border: #FF3366;
 
 // login page
 $login-card-bg: #FFF;
-
 $login-form-circle-bg: #FF3366;
+
+// recovery container
+$recovery-text-color: #000;
+$sing-up-link-color: #FF3366;
+$forgot-link-color: #1DB0B5;
 
 // login button style
 $login-button-bg: #FFF;
@@ -40,3 +44,4 @@ $login-button-border-color: #FF3366;
 $login-button-bg-hv: #FF3366;
 $login-button-color-hv: #FFF;
 $login-button-border-color-hv: #FF3366;
+
