--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -14,12 +14,12 @@
                     </div>
                 </form>
             </div>
-            <div class="">
-                <div class="">
-                    Don't have an account? <a href="" class="">Sign Up</a>
+            <div class="recovery-container">
+                <div class="sign-up">
+                    Don't have an account? <a href="" class="sign-up-link">Sign Up</a>
                 </div>
-                <div class="">
-                    <a href="">Forgot your password?</a>
+                <div>
+                    <a href="" class="forgot-password">Forgot your password?</a>
                 </div>
             </div>
         </div>
