Login form email and password fields added

--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -35,6 +35,9 @@ $recovery-text-color: #000;
 $sing-up-link-color: #FF3366;
 $forgot-link-color: #1DB0B5;
 
+// userform input boxes
+$input-box-color: #ABABAB;
+
 // login button style
 $login-button-bg: #FFF;
 $login-button-color: #FF3366;
