--- a/scss/components/forms/login-form.scss
+++ b/scss/components/forms/login-form.scss
@@ -56,7 +56,25 @@
 }
 
 .form-container {
-    margin-top: 100px;
+    margin-top: 80px;
+}
+
+.form-group {
+    padding: 0 1rem;
+}
+
+.form-control {
+    color: $input-box-color;
+}
+
+.form-control:focus {
+    box-shadow: none;
+    border-color: #CCC;
+    outline: none !important;
+}
+
+.login-button{
+    padding-top: 10px;
 }
 
 .login-btn {
@@ -72,12 +90,8 @@
     }
 }
 
-.login-container {
-    padding: 0 1rem;
-}
-
 .recovery-container {
-    padding: 1rem 1rem;
+    padding: 0 1rem;
     font-size: 0.85rem;
     text-align: left;
     color: $recovery-text-color;
@@ -103,4 +117,9 @@
         color: $forgot-link-color;
         opacity: 1;
     }
+}
+
+.small,
+small {
+    font-size: 0.75rem;
 }
