--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -1,19 +1,35 @@
-<!-- Section margin - line -->
+<!-- Main login container -->
 <div class="container">
     <div class="login-form">
         <div class="user-card">
+            <!-- Top logo container -->
             <div class="flex-center">
                 <div class="brand-logo-container">
                     <img src="/static/images/logotype/login-logo.png" class="brand-logo" alt="Logo">
                 </div>
             </div>
+            <!-- Form container -->
             <div class="form-container">
+                <!-- Form -->
                 <form>
-                    <div class="login-container">
+                    <!-- Email input box -->
+                    <div class="form-group">
+                        <label for="">Email address</label>
+                        <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Enter email">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+                     <!-- Password input box -->
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                     <!-- Login button -->
+                    <div class="form-group login-button">
                         <button type="button" name="button" class="btn login-btn">Login</button>
                     </div>
                 </form>
             </div>
+            <!-- Recovery links container -->
             <div class="recovery-container">
                 <div class="sign-up">
                     Don't have an account? <a href="" class="sign-up-link">Sign Up</a>
