--- a/scss/base/main.scss
+++ b/scss/base/main.scss
@@ -2,7 +2,7 @@ html,
 body {
     height: 100%;
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     font-size: 1rem;
     font-weight: 300;
     text-decoration: none;
