--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -4,6 +4,7 @@
         <div class="user-card">
             <!-- Top logo container -->
             <div class="flex-center">
+                <div class="half-circle"></div>
                 <div class="brand-logo-container">
                     <img src="/static/images/logotype/login-logo.png" class="brand-logo" alt="Logo">
                 </div>
@@ -18,12 +19,12 @@
                         <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Enter email">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
-                     <!-- Password input box -->
+                    <!-- Password input box -->
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                     </div>
-                     <!-- Login button -->
+                    <!-- Login button -->
                     <div class="form-group login-button">
                         <button type="button" name="button" class="btn login-btn">Login</button>
                     </div>
