Sticky-footer class test created

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -407,5 +407,9 @@ small {
     text-align: left;
   }
 }
+.sticky-footer {
+  position: fixed;
+  bottom: 0;
+}
 
 /*# sourceMappingURL=style.css.map */
