Recovery and Register links added

--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -1,6 +1,6 @@
 {% extends 'layout/base.html' %} {% block content %}
-<div class="container section-margin">
-    <h1 class="hidden">Login page</h1>
+<div class="container section-margin sticky-footer">
+    <h1 class="hidden">Login Page</h1>
     {% include 'components/forms/login-form.html' %}
 </div>
 {% endblock %}
