--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -1,4 +1,5 @@
 <!-- Main login container -->
+<h2 class="hidden">Login Form</h2>
 <div class="container">
     <div class="login-form">
         <div class="user-card">
@@ -33,10 +34,10 @@
             <!-- Recovery links container -->
             <div class="recovery-container">
                 <div class="sign-up">
-                    Don't have an account? <a href="" class="sign-up-link">Sign Up</a>
+                    Don't have an account? <a href="{{url_for('register')}}" class="sign-up-link">Sign Up</a>
                 </div>
                 <div>
-                    <a href="" class="forgot-password">Forgot your password?</a>
+                    <a href="{{url_for('recovery')}}" class="forgot-password">Forgot your password?</a>
                 </div>
             </div>
         </div>
