--- a/scss/page-styles/login.scss
+++ b/scss/page-styles/login.scss
@@ -1,4 +1,6 @@
-.sticky-footer {
-    position: fixed;
-    bottom: 0;
+@media scren only and(max-height: 1020px) {
+    .sticky-footer {
+        position: fixed;
+        bottom: 0;
+    }
 }
