--- a/static/css/style.css
+++ b/static/css/style.css
@@ -407,8 +407,8 @@ small {
     text-align: left;
   }
 }
-@media scren only and (max-height: 1020px) {
-  .sticky-footer {
+@media screen and (min-height: 1020px) {
+  #login-page footer {
     position: fixed;
     bottom: 0;
   }
