--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -6,7 +6,7 @@
     {% include 'layout/head.html' %}
 </head>
 
-<body>
+<body id="{{ body_id }}">
     <header>
     <!-- Include header - navigation -->
     {% include 'components/header/nav.html' %}
