Login-page, footer media query style changed

--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -1,5 +1,5 @@
 {% extends 'layout/base.html' %} {% block content %}
-<div class="container section-margin login-flex sticky-footer">
+<div class="container login-flex sticky-footer">
     <h1 class="hidden">Login Page</h1>
     {% include 'components/forms/login-form.html' %}
 </div>
