--- a/templates/pages/register.html
+++ b/templates/pages/register.html
@@ -1,5 +1,5 @@
 {% extends 'layout/base.html' %} {% block content %}
-<div class="container section-margin sticky-footer">
+<div class="container login-flex sticky-footer">
     <h1 class="hidden">Register Page</h1>
     {% include 'components/forms/register-form.html' %}
 </div>
