Quick fix, unwanted code removed from user form in login-page

--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -48,3 +48,24 @@ $login-button-bg-hv: #FF3366;
 $login-button-color-hv: #FFF;
 $login-button-border-color-hv: #FF3366;
 
+// register page
+
+// register button style
+$register-button-bg: #FFF;
+$register-button-color: #FF3366;
+$register-button-border-color: #FF3366;
+
+// register button hover style
+$register-button-bg-hv: #FF3366;
+$register-button-color-hv: #FFF;
+$register-button-border-color-hv: #FF3366;
+
+// cancel button style
+$cancel-button-bg: #FFF;
+$cancel-button-color: #1DB0B5;
+$cancel-button-border-color: #1DB0B5;
+
+// cancel button hover style
+$cancel-button-bg-hv: #1DB0B5;
+$cancel-button-color-hv: #FFF;
+$cancel-button-border-color-hv: #1DB0B5;
