--- a/templates/components/forms/register-form.html
+++ b/templates/components/forms/register-form.html
@@ -28,7 +28,7 @@
                 </div>
                 <!-- Register button -->
                 <div class="form-group login-button">
-                    <button type="button" name="button" class="btn login-btn">Login</button>
+                    <button type="button" name="button" class="btn register-btn">Register</button>
                 </div>
                 <!-- Cancel button -->
                 <div class="form-group cancel-button">
