--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -15,14 +15,14 @@
             <form>
                 <!-- Email input box -->
                 <div class="form-group">
-                    <label for="">Email address</label>
+                    <label>Email address</label>
                     <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Enter email">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <!-- Password input box -->
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <label>Password</label>
+                    <input type="password" class="form-control" id="login-password" placeholder="Password">
                 </div>
                 <!-- Login button -->
                 <div class="form-group login-button">
