Register form button style changed

--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -49,6 +49,10 @@ $login-button-color-hv: #FFF;
 $login-button-border-color-hv: #FF3366;
 
 // register page
+$register-card-bg: #FFF;
+
+// register form title
+$register-form-title:#FF3366;
 
 // register button style
 $register-button-bg: #FFF;
