--- a/templates/components/forms/register-form.html
+++ b/templates/components/forms/register-form.html
@@ -1,5 +1,5 @@
 <!-- Main login container -->
-<h2 class="hidden">Login Form</h2>
+<h2 class="hidden">Register Form</h2>
 <div class="register-form">
     <div class="register-user-card">
         <!-- Form container -->
