Missing import links added to style.scss file

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,5 +25,7 @@
 @import 'page-styles/login.scss';
 @import 'page-styles/my-account.scss';
 @import 'page-styles/recipes.scss';
+@import 'page-styles/recovery.scss';
+@import 'page-styles/register.scss';
 @import 'page-styles/search-result.scss';
 @import 'page-styles/site-map.scss';
