--- a/static/css/style.css
+++ b/static/css/style.css
@@ -520,5 +520,23 @@ small {
     bottom: 0;
   }
 }
+@media screen and (min-height: 983px) and (min-width: 1020px) {
+  #register-page .main-container {
+    height: calc(100% - 360px);
+    padding-top: 60px;
+  }
+  #register-page .register-flex {
+    display: flex;
+    justify-content: center;
+  }
+  #register-page .register-form {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  #register-page footer {
+    position: fixed;
+    bottom: 0;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
