Recovery form coloristic variables added

--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -1,7 +1,6 @@
 // headings
 $h4-color: #FF3366;
 
-
 // main navigation 
 $nav-bg-color: #FFF;
 $nav-border-color: #FF3366;
@@ -73,3 +72,19 @@ $cancel-button-border-color: #1DB0B5;
 $cancel-button-bg-hv: #1DB0B5;
 $cancel-button-color-hv: #FFF;
 $cancel-button-border-color-hv: #1DB0B5;
+
+// register page
+$recovery-card-bg: #FFF;
+
+// register form title
+$recovery-form-title:#FF3366;
+
+// register button style
+$recovery-button-bg: #FFF;
+$recovery-button-color: #FF3366;
+$recovery-button-border-color: #FF3366;
+
+// register button hover style
+$recovery-button-bg-hv: #FF3366;
+$recovery-button-color-hv: #FFF;
+$recovery-button-border-color-hv: #FF3366;
