Testing code applied and removed

--- a/templates/components/forms/register-form.html
+++ b/templates/components/forms/register-form.html
@@ -33,7 +33,7 @@
                 <!-- Cancel button -->
                 <div class="form-group cancel-button">
                     <a href="{{url_for('login')}}">
-                        <button type="button" name="button" class="btn cancel-btn">Cancel</button>
+                        <button type="button" name="button" class="btn cancel-btn" id="register-cancel-button">Cancel</button>
                     </a>
                 </div>
             </form>
