Recovery import link added

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,7 @@
 @import 'components/carousel/carousel.scss';
 @import 'components/forms/contact-form.scss';
 @import 'components/forms/login-form.scss';
+@import 'components/forms/recovery-form.scss';
 @import 'components/forms/register-form.scss';
 @import 'components/footer/footer.scss';
 
