Register-flex class changed to recovery-flex class

--- a/templates/pages/recovery.html
+++ b/templates/pages/recovery.html
@@ -1,6 +1,6 @@
 {% extends 'layout/base.html' %} {% block content %}
-<div class="container section-margin sticky-footer">
-    <h1 class="hidden">Credentials Recovery</h1>
+<div class="container recovery-flex sticky-footer">
+    <h1 class="hidden">Recovery Page</h1>
     {% include 'components/forms/recovery-form.html' %}
 </div>
 {% endblock %}
