Forms top padding changed to 2rem

--- a/scss/page-styles/login.scss
+++ b/scss/page-styles/login.scss
@@ -5,7 +5,7 @@ $b: 360px;
         #login-page {
             .main-container {
                 height: calc(#{$a} - #{$b});
-                padding-top: 60px;
+                padding-top: 2rem;
             }
             .login-flex {
                 display: flex;
